# bamboo

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  __init__.py  auth.py  bamboo_env_example.sh  pyproject.toml  pyrightconfig.json  requirements-anthropic.txt  requirements-dev.txt  requirements-gemini.txt  requirements-mistral.txt  requirements-openai.txt  requirements-otel.txt  requirements-rag.txt  requirements-textual.txt  requirements.txt
askpanda_mcp/: config.py  core.py  server.py
core/: pyproject.toml
core/bamboo/: __init__.py  auth.py  cli.py  config.py  core.py  server.py  tracing.py
core/bamboo/entrypoints/: __init__.py  http.py
core/bamboo/llm/: __init__.py  base.py  config_loader.py  factory.py  manager.py  registry.py  runtime.py  selector.py  types.py
core/bamboo/llm/providers/: anthropic_client.py  gemini_client.py  mistral_client.py  openai_client.py  openai_compat_client.py
core/bamboo/prompts/: templates.py
core/bamboo/tools/: _mcp_caller.py  _panda_http.py  bamboo_answer.py  bamboo_executor.py  base.py  doc_bm25.py  doc_rag.py  health.py  job_status.py  llm_passthrough.py  loader.py  log_analysis.py  pilot_monitor.py  planner.py  queue_info.py  task_status.py  task_status_atlas.py  topic_guard.py
docs/: cric-database.md  developer.md  harvester-workers.md  http-server.md  interfaces.md  jobs-database.md  mcp.md  mcp_sequence_diagram.mmd  mcp_tools_selection.mmd  plugins.md  question-cheatsheet.md  rag.md  security.md  tracing.md
interfaces/: README.md  __init__.py
scripts/: bump_version.py  generate_tokens.py  (+5 more)
(+50 files in other folders)
