[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo"
version = "1.0.4"
description = "Bamboo — lightweight MCP-based runtime with a plugin architecture for AI-assisted scientific tools."
requires-python = ">=3.10"
dependencies = ["mcp>=0.9.0", "python-dotenv>=1.0.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bamboo*", "interfaces*"]

[tool.askpanda]
default_namespace = "atlas"

# Entry points for tools shipped with the root package (if any).
# Plugin packages (e.g. packages/askpanda_atlas) register their own entry
# points under bamboo.tools in their own pyproject.toml.
# [project.entry-points."bamboo.tools"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
