[project]
name = "bamboo-core"
version = "1.0.1"
description = "Bamboo core (MCP server, loader, orchestration)"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "requests",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bamboo", "bamboo.tools", "bamboo.llm", "bamboo.llm.providers",
            "bamboo.entrypoints", "bamboo.prompts"]
package-data = {"bamboo" = ["py.typed"], "bamboo.tools" = ["py.typed"]}
